Fix transformatoion of shapes that come from transforming the layer itself

Since we don't clone the root layer's shape, when cloning them, we should
manually apply the transformation of the root, from which we detach them.

BUG:417016